<resources>
    <string name="app_name">Infinity Quiz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="company_name">Storm\nArts</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="enter_your_nickname">enter your nickname</string>
    <string name="signin_other_error">unexpected Error</string>
    <string name="start">START</string>
    <string name="leadership">LEADERSHIP</string>
    <string name="game_store">game store</string>
    <string name="about">about</string>
    <string name="log_out">log out</string>
    <string name="back">back</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="score">score:</string>
</resources>
