<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SelectLevelActivity">

    <android.support.v7.widget.AppCompatImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@mipmap/main_page_bg"
        android:scaleType="centerCrop"/>
    <FrameLayout
        android:id="@+id/select_level_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:showDividers="middle"
            android:divider="@drawable/menu_buttons_divider_horizontal"
            >
            <com.stormarts.infinityquiz.ui.widget.BebasButton
                android:id="@+id/level_1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="78sp"
                android:includeFontPadding="false"
                android:paddingTop="14dp"
                android:background="@drawable/menu_start_button"
                android:text="@string/easy"
                android:letterSpacing="@dimen/bebas_spacing"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
            <com.stormarts.infinityquiz.ui.widget.BebasButton
                android:id="@+id/level_2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="78sp"
                android:includeFontPadding="false"
                android:paddingTop="14dp"
                android:background="@drawable/level_normal_button"
                android:text="@string/normal"
                android:letterSpacing="@dimen/bebas_spacing"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />
            <com.stormarts.infinityquiz.ui.widget.BebasButton
                android:id="@+id/level_3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="78sp"
                android:includeFontPadding="false"
                android:paddingTop="14dp"
                android:background="@drawable/level_hard_button"
                android:text="@string/hard"
                android:letterSpacing="@dimen/bebas_spacing"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            <com.stormarts.infinityquiz.ui.widget.BebasButton
                android:id="@+id/level_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:includeFontPadding="false"
                android:paddingTop="14dp"
                android:background="@drawable/menu_button"
                android:text="@string/back"
                android:letterSpacing="@dimen/bebas_spacing"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            </LinearLayout>

    </FrameLayout>


</FrameLayout>