<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/sign_in_back"
    android:padding="16dp">

    <TextView

        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:text="@string/enter_your_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/ok_button"
        android:text="@string/ok"
        android:layout_width="0dp"
        android:src="@drawable/login_ok_button"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/nicknameEditText" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/login_cancel_button"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameEditText" />
</android.support.constraint.ConstraintLayout>